--- a/Event Management System/Pages/Event/ManageEvents.cshtml
+++ b/Event Management System/Pages/Event/ManageEvents.cshtml
@@ -27,7 +27,7 @@
                 <td>@eventItem.Location</td>
                 <td>@eventItem.MaxParticipants</td>
                 <td>
-                    <a asp-page="/CreateEvent" asp-route-id="@eventItem.Id" class="btn btn-warning">Edit</a>
+                    <a asp-page="/Event/EditEvent" asp-route-id="@eventItem.Id" class="btn btn-warning">Edit</a>
                     <form method="post" asp-page-handler="Delete" asp-route-id="@eventItem.Id" class="d-inline">
                         <button type="submit" class="btn btn-danger">Delete</button>
                     </form>
@@ -36,7 +36,7 @@
         }
         <tr>
             <td colspan="6">
-                <a asp-page="/CreateEvent" class="btn btn-success">Create New Event</a>
+                <a asp-page="/Event/CreateEvent" class="btn btn-success">Create New Event</a>
             </td>
         </tr>
     </tbody>
